--- a/src/App.scss
+++ b/src/App.scss
@@ -3,3 +3,15 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body {
+  background-color: #f5f5f5;
+}
+
+.title {
+  color: #0a3251;
+}
+
+.title:hover {
+  color: #ff5000;
+}
