--- a/src/components/carouselNav/CarouselNavigation.scss
+++ b/src/components/carouselNav/CarouselNavigation.scss
@@ -2,17 +2,15 @@
   margin-left: -350px;
 }
 .list {
-  background-color: #ff5000;
-  height: 100%;
-  position: absolute;
+  // height: 100%;
+  position: relative;
   top: 0;
-  margin-left: 100px;
   z-index: 3;
   width: 227px;
 }
 
-@media screen and (max-width: 1000px) {
-  .list {
-    display: none;
-  }
-}
+// @media screen and (max-width: 1000px) {
+//   .list {
+//     display: none;
+//   }
+// }
