--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -8,8 +8,23 @@
   grid-template-columns: repeat(5, 250px);
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 1290px) {
   .products-container {
-    grid-template-columns: repeat(1, 250px);
+    grid-template-columns: repeat(4, 250px);
+  }
+}
+@media screen and (max-width: 1150px) {
+  .products-container {
+    grid-template-columns: repeat(3, 250px);
+  }
+}
+@media screen and (max-width: 890px) {
+  .products-container {
+    grid-template-columns: repeat(2, 50%);
+  }
+}
+@media screen and (max-width: 550px) {
+  .products-container {
+    grid-template-columns: repeat(1, 80%);
   }
 }
