modifying payment using stripe

--- a/src/components/carouselNav/CarouselNavigation.scss
+++ b/src/components/carouselNav/CarouselNavigation.scss
@@ -9,8 +9,8 @@
   width: 227px;
 }
 
-// @media screen and (max-width: 1000px) {
-//   .list {
-//     display: none;
-//   }
-// }
+@media screen and (max-width: 1000px) {
+  .list {
+    display: none;
+  }
+}
