modify responsive styling

--- a/src/components/productItemSlider/ProductItemSlider.css
+++ b/src/components/productItemSlider/ProductItemSlider.css
@@ -14,7 +14,7 @@
   background: blue;
 }
 .buttons {
-  background: orangered !important;
+  background: purple !important;
   color: white !important;
   transition: 700ms;
 }
